add all api and clean up the code
